[gd_scene load_steps=23 format=3 uid="uid://c7rwq6t2f05xg"]

[ext_resource type="Texture2D" uid="uid://dcc4eekcq2w8x" path="res://PokC3A9mon_Center_inside_RSE.png" id="1_4a6he"]
[ext_resource type="Script" path="res://assets/scripts/screen_2.gd" id="1_paoih"]
[ext_resource type="Script" path="res://assets/scripts/character_body_2d.gd" id="2_qelxt"]
[ext_resource type="Script" path="res://assets/scripts/hitbox_controller.gd" id="3_2v7s8"]
[ext_resource type="Texture2D" uid="uid://c1ub56m1wksmq" path="res://assets/placeholders/char_a_p1/humn.png" id="4_3gyds"]
[ext_resource type="PackedScene" uid="uid://drw6kjaxpj0gv" path="res://scenes/transition_animation.tscn" id="6_4a6co"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jdysr"]
size = Vector2(8.85714, 15.2857)

[sub_resource type="Animation" id="Animation_gkj61"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_goax2"]
resource_name = "idle_down"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_csaki"]
resource_name = "idle_left"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 3)]
}

[sub_resource type="Animation" id="Animation_0h80e"]
resource_name = "idle_right"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 2)]
}

[sub_resource type="Animation" id="Animation_84351"]
resource_name = "idle_up"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 1)]
}

[sub_resource type="Animation" id="Animation_a2vxc"]
resource_name = "mine_down"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.266667),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [0],
"method": &"draw_hitbox"
}, {
"args": [],
"method": &"clear_hitbox"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.266667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0],
"method": &"set_state"
}]
}

[sub_resource type="Animation" id="Animation_bc1kq"]
resource_name = "mine_left"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 3)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.266667),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [1],
"method": &"draw_hitbox"
}, {
"args": [],
"method": &"clear_hitbox"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.266667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0],
"method": &"set_state"
}]
}

[sub_resource type="Animation" id="Animation_fs2d4"]
resource_name = "mine_right"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 2)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.266667),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [2],
"method": &"draw_hitbox"
}, {
"args": [],
"method": &"clear_hitbox"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.266667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0],
"method": &"set_state"
}]
}

[sub_resource type="Animation" id="Animation_ocb8w"]
resource_name = "mine_up"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.266667),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [3],
"method": &"draw_hitbox"
}, {
"args": [],
"method": &"clear_hitbox"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.266667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0],
"method": &"set_state"
}]
}

[sub_resource type="Animation" id="Animation_trskn"]
resource_name = "move_down"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4), Vector2i(4, 4), Vector2i(5, 4), Vector2i(5, 4)]
}

[sub_resource type="Animation" id="Animation_wy0ik"]
resource_name = "move_left"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 7), Vector2i(1, 7), Vector2i(2, 7), Vector2i(3, 7), Vector2i(4, 7), Vector2i(5, 7), Vector2i(5, 7)]
}

[sub_resource type="Animation" id="Animation_1xn7k"]
resource_name = "move_right"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 6), Vector2i(1, 6), Vector2i(2, 6), Vector2i(3, 6), Vector2i(4, 6), Vector2i(5, 6), Vector2i(5, 6)]
}

[sub_resource type="Animation" id="Animation_founn"]
resource_name = "move_up"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 5), Vector2i(1, 5), Vector2i(2, 5), Vector2i(3, 5), Vector2i(4, 5), Vector2i(5, 5), Vector2i(5, 5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q77i1"]
_data = {
"RESET": SubResource("Animation_gkj61"),
"idle_down": SubResource("Animation_goax2"),
"idle_left": SubResource("Animation_csaki"),
"idle_right": SubResource("Animation_0h80e"),
"idle_up": SubResource("Animation_84351"),
"mine_down": SubResource("Animation_a2vxc"),
"mine_left": SubResource("Animation_bc1kq"),
"mine_right": SubResource("Animation_fs2d4"),
"mine_up": SubResource("Animation_ocb8w"),
"move_down": SubResource("Animation_trskn"),
"move_left": SubResource("Animation_wy0ik"),
"move_right": SubResource("Animation_1xn7k"),
"move_up": SubResource("Animation_founn")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vraob"]
size = Vector2(145, 138)

[node name="screen2" type="Node2D"]
script = ExtResource("1_paoih")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(2048, 1600)
offset_right = 40.0
offset_bottom = 40.0

[node name="PokC3a9MonCenterInsideRse" type="Sprite2D" parent="."]
position = Vector2(581, 325.5)
scale = Vector2(5.17857, 4.53472)
texture = ExtResource("1_4a6he")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
z_index = 6
position = Vector2(124, 434)
scale = Vector2(7, 7)
collision_layer = 6
script = ExtResource("2_qelxt")

[node name="Node2D" type="Node2D" parent="CharacterBody2D"]
position = Vector2(-0.428571, 0.142857)
script = ExtResource("3_2v7s8")

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D"]
z_index = 2
position = Vector2(-0.142855, 1.85714)
scale = Vector2(0.511161, 0.526786)
texture = ExtResource("4_3gyds")
hframes = 8
vframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(1.43051e-06, 0.285714)
shape = SubResource("RectangleShape2D_jdysr")
script = ExtResource("3_2v7s8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CharacterBody2D"]
libraries = {
"": SubResource("AnimationLibrary_q77i1")
}

[node name="Collisions" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Collisions"]
polygon = PackedVector2Array(-5, -2, -1, 347, -145, 346, -163, 494, 0, 492, -2, 654, 496, 649, 503, 774, 654, 764, 656, 653, 1072, 649, 1152, 581, 1164, 200, 1080, 99, 928, 106, 909, 150, 819, 150, 813, 250, 780, 252, 348, 244, 334, 134, 139, 134, 87, 127, 10, 170, 20, -2, 78, -83, -20, -79, 147, -132, 1033, -115, 1269, -113, 1276, 208, 1274, 636, 1150, 736, 507, 862, 32, 849, -347, 686, -398, 211, -112, -35)

[node name="scene_transition2" type="Area2D" parent="."]
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="scene_transition2"]
position = Vector2(-73.5, 420)
shape = SubResource("RectangleShape2D_vraob")

[node name="transition_animation" parent="scene_transition2" instance=ExtResource("6_4a6co")]
visibility_layer = 15
z_index = 12
position = Vector2(-6, 0)

[connection signal="body_entered" from="scene_transition2" to="." method="_on_scene_transition_2_body_entered"]
[connection signal="body_exited" from="scene_transition2" to="." method="_on_scene_transition_2_body_exited"]
